--- a/numpy_student_lab.ipynb
+++ b/numpy_student_lab.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 157,
       "metadata": {
         "id": "8e2llPlAhiFx"
       },
@@ -67,12 +67,12 @@
       ],
       "metadata": {
         "id": "fA0dNmozhpEJ",
-        "outputId": "687cb2c4-54f0-4de9-f91c-1c924905ca51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3bf2fce3-df74-44a1-fdc9-a405be7a22ea"
       },
-      "execution_count": 3,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 158
         }
       ]
     },
@@ -105,12 +105,12 @@
       ],
       "metadata": {
         "id": "llCJGu2Qh1mu",
-        "outputId": "f7c3993e-1c36-4be9-d804-ab5d18f70994",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "21f3ff3b-09aa-48cc-dc24-80c8a87fb36f"
       },
-      "execution_count": 4,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 159
         }
       ]
     },
@@ -147,12 +147,12 @@
       ],
       "metadata": {
         "id": "J2AUBC4jh32D",
-        "outputId": "b595281d-fb61-43d7-81a7-352ac3e10b40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "407d480e-af08-4771-c49f-d9c4a6827f16"
       },
-      "execution_count": 6,
+      "execution_count": 160,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +184,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 160
         }
       ]
     },
@@ -221,12 +221,12 @@
       ],
       "metadata": {
         "id": "cK_OEpKjh6KD",
-        "outputId": "33195212-7f2f-4ebd-f5a3-f1c3e2e13ebd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5aa9a71d-bd4d-46af-dff8-635d1475bcac"
       },
-      "execution_count": 12,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +326,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 161
         }
       ]
     },
@@ -338,28 +338,26 @@
         "\n",
         "# HINT:\n",
         "# - Use .nbytes\n",
-        "arr_int.nbytes\n",
+        "print(\"arr_int size:\",arr_int.nbytes)\n",
         "\n",
-        "arr_float.nbytes\n"
+        "print(\"arr_float size:\",arr_float.nbytes)\n"
       ],
       "metadata": {
         "id": "J25XhniciNmu",
-        "outputId": "0ac963a5-399d-444b-cd44-c3756945c569",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dd0b9105-41e2-4306-9c38-e3be8eb67043"
       },
-      "execution_count": 16,
+      "execution_count": 162,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "8000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "arr_int size: 8000\n",
+            "arr_float size: 8000\n"
+          ]
         }
       ]
     },
@@ -407,12 +405,12 @@
       ],
       "metadata": {
         "id": "UFoMJJr1iRPn",
-        "outputId": "050be778-2026-4a8d-db90-82a3c75ae1a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f739fbf2-c81d-436f-e93c-b2ff08e55a4d"
       },
-      "execution_count": 18,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 163
         }
       ]
     },
@@ -438,12 +436,12 @@
       ],
       "metadata": {
         "id": "RZwW0qeLiYpP",
-        "outputId": "2dd018c2-e4ad-4336-a35b-40102d728cf4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a61b3488-3d8c-413d-c96a-97208a70bea3"
       },
-      "execution_count": 19,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +455,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 164
         }
       ]
     },
@@ -491,12 +489,12 @@
       ],
       "metadata": {
         "id": "WOaETRXBimsR",
-        "outputId": "9958a2e7-9074-42af-d64d-6e0e64b3ffac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca53cdae-6f1d-40c2-d366-9d605bdd19cb"
       },
-      "execution_count": 27,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,7 +753,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 165
         }
       ]
     },
@@ -775,12 +773,12 @@
       ],
       "metadata": {
         "id": "1lqB6hi1iw1N",
-        "outputId": "3fa4621d-fd63-4f3f-8940-fada9f574335",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "23385fa1-cedb-496a-cd4e-047a6a15cf4c"
       },
-      "execution_count": 30,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -915,7 +913,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 166
         }
       ]
     },
@@ -924,13 +922,34 @@
       "source": [
         "# TODO:\n",
         "# Replace negative values with 0 (no loops)\n",
-        "\n"
+        "X_copy = X.copy()\n",
+        "X_copy[X_copy<0] = 0\n",
+        "\n",
+        "X_copy\n",
+        "\n",
+        "print('mean',mean)\n",
+        "print('above mean count:',X_gt_mean.size)\n",
+        "print('negative after replacing:',(X_copy < 0).sum())"
       ],
       "metadata": {
-        "id": "uhI9Mq9hiy-e"
+        "id": "uhI9Mq9hiy-e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41898fda-655f-4ffa-b58a-544a0e4248b4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mean -0.06888960857515684\n",
+            "above mean count: 501\n",
+            "negative after replacing: 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -955,47 +974,149 @@
       "source": [
         "# TODO:\n",
         "# Create A (1000, 50) and b (50,)\n",
-        "\n",
-        "A = ...\n",
-        "b = ...\n"
+        "rng = np.random.default_rng(1)\n",
+        "A = rng.standard_normal((1000,50))\n",
+        "b = rng.standard_normal((50,))\n",
+        "b.shape"
       ],
       "metadata": {
-        "id": "vBzCyUtdi2AN"
+        "id": "vBzCyUtdi2AN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "305e96de-5a5a-4de8-b793-a7bd106c81d4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(50,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 168
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# TODO:\n",
         "# Add b to each row of A\n",
-        "\n",
+        "A_plus = A + b\n",
+        "print(\"A\",A)\n",
+        "print(\"b\",b)\n",
+        "print(\"A_plus\",A_plus)\n",
+        "A_plus.shape\n",
         "# HINT:\n",
         "# - No reshape required\n"
       ],
       "metadata": {
-        "id": "_gwUX5izjBh-"
+        "id": "_gwUX5izjBh-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3c8ce506-80da-4248-db0b-a810f11e5be9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A [[ 0.34558419  0.82161814  0.33043708 ... -0.50629166  0.59374807\n",
+            "   0.89116695]\n",
+            " [ 0.3208483  -0.81823023  0.73165228 ...  0.0330001  -1.42534896\n",
+            "   0.33281361]\n",
+            " [-0.65128101  0.8624448  -0.12559208 ...  0.42514874  0.28241584\n",
+            "  -1.15929673]\n",
+            " ...\n",
+            " [ 2.63806388  0.1786702  -1.503011   ... -0.89979321 -1.09720577\n",
+            "   2.45949873]\n",
+            " [ 0.25460571 -0.64984191  0.02022446 ...  0.69710746 -1.57753933\n",
+            "  -0.47634927]\n",
+            " [-0.4769489  -0.49410047 -0.81352119 ... -0.38350551 -0.34688599\n",
+            "  -0.18918713]]\n",
+            "b [-0.02215035  0.42352295  0.83961772  0.13917553  1.63394651 -0.76185535\n",
+            " -0.46289533  0.32236092  0.12571245  0.47426305  0.05006911  0.70806523\n",
+            "  0.01446776 -1.68793899  0.21504247 -0.82351637  0.80367564  0.92058909\n",
+            " -0.23200302 -2.04936228  1.60474282 -0.27090957  0.34082181 -1.19988925\n",
+            " -0.66366466 -1.1153355   0.79699651  2.02121366 -1.37273641 -0.75996509\n",
+            " -0.72778754 -1.65573038 -1.10682092  0.53172428 -0.23391387 -0.73098463\n",
+            "  1.81925951  1.76574199 -0.65318475  1.10633212 -0.20341185 -0.10692746\n",
+            " -0.29864409  0.98955378  0.25016342 -1.0445511  -2.17223533 -1.48896723\n",
+            " -1.94017041  0.17617259]\n",
+            "A_plus [[ 0.32343384  1.2451411   1.1700548  ... -1.99525888 -1.34642234\n",
+            "   1.06733954]\n",
+            " [ 0.29869796 -0.39470727  1.57127001 ... -1.45596712 -3.36551937\n",
+            "   0.5089862 ]\n",
+            " [-0.67343136  1.28596775  0.71402564 ... -1.06381849 -1.65775457\n",
+            "  -0.98312414]\n",
+            " ...\n",
+            " [ 2.61591353  0.60219316 -0.66339328 ... -2.38876044 -3.03737618\n",
+            "   2.63567132]\n",
+            " [ 0.23245537 -0.22631895  0.85984218 ... -0.79185976 -3.51770975\n",
+            "  -0.30017668]\n",
+            " [-0.49909925 -0.07057752  0.02609653 ... -1.87247274 -2.28705641\n",
+            "  -0.01301454]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000, 50)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# TODO:\n",
+        "#one of the usecases of broadcasting is normalization\n",
         "# Normalize each row of A\n",
-        "\n",
+        "# Normalization = rescaling data so values are on a comparable scale.\n",
         "# HINT:\n",
         "# - Axis matters\n",
         "# - Keep dimensions in mind\n",
-        "\n"
+        "# there are different types of normalization, min max normalization and this is the standard normalization\n",
+        "# row - mean(row) / std(row)\n",
+        "row_mean = A.mean(axis=1,keepdims=True)\n",
+        "#keep dims make other column as 1 otherwise it would have been a 1D array with 1000 values\n",
+        "#for 1000 row we have the mean in single col\n",
+        "#row_mean.shape\n",
+        "#standard divation is square root of each value in the row - mean / total no of values (sq root of avg squared distance from mean)\n",
+        "row_std = A.std(axis=1,keepdims=True)\n",
+        "#row_std.shape\n",
+        "A_norm = (A-row_mean)/row_std\n",
+        "A_norm.shape"
       ],
       "metadata": {
-        "id": "ZlPV3LMFjDf0"
+        "id": "ZlPV3LMFjDf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c6d18e24-3b07-470f-a36e-f4a06d05a007"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000, 50)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 170
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1021,13 +1142,35 @@
         "# TODO:\n",
         "# Intentionally trigger a broadcasting error\n",
         "# Then fix it\n",
-        "\n"
+        "\n",
+        "col = np.arange(1000)\n",
+        "col.shape\n",
+        "try:\n",
+        "  _ = A - col\n",
+        "except ValueError as e:\n",
+        "  print('Expected broadcasting error:',e)\n",
+        "col2 = col.reshape(-1,1)\n",
+        "A_fixed = A - col2\n",
+        "print('Fixed shape after substraction:',A_fixed.shape)"
       ],
       "metadata": {
-        "id": "zBChDtpejHN6"
+        "id": "zBChDtpejHN6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5498805-f13a-448a-b682-56f55c44b9a4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Expected broadcasting error: operands could not be broadcast together with shapes (1000,50) (1000,) \n",
+            "Fixed shape after substraction: (1000, 50)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1061,14 +1204,30 @@
       "source": [
         "# TODO:\n",
         "# Create large array X of size 1,000,000\n",
-        "\n",
-        "X = ...\n"
+        "rng = np.random.default_rng(2)\n",
+        "X = rng.standard_normal(1_000_000)\n",
+        "X.shape"
       ],
       "metadata": {
-        "id": "9HEd9iD7jRkx"
+        "id": "9HEd9iD7jRkx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "234758db-a16a-47a9-cb0b-5ea2f1162965"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 186,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1000000,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 186
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1078,32 +1237,69 @@
         "\n",
         "# HINT:\n",
         "# - Time it\n",
+        "#mean of all 1 million values\n",
+        "mu = X.mean()\n",
+        "#std of all 1 million values\n",
+        "sigma = X.std()\n",
+        "t0 = time.time()\n",
+        "out_loop = np.empty_like(X)\n",
+        "for i in range(X.shape[0]):\n",
+        "  out_loop[i] = (X[i]-mu)/sigma\n",
+        "time_taken = time.time() - t0\n",
+        "print(round(time_taken,4))\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "2mwCsbQIjb6C"
+        "id": "2mwCsbQIjb6C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7d158f62-772d-438b-f393-57262f971d24"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.8823\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# TODO:\n",
         "# Normalize using vectorization\n",
-        "\n"
+        "t1= time.time()\n",
+        "out_vec = (X - mu)/sigma\n",
+        "vec_time = time.time() - t1\n",
+        "print(round((time_taken)/max(vec_time,1e-12),1))"
       ],
       "metadata": {
-        "id": "VnBPlOLPjjEQ"
+        "id": "VnBPlOLPjjEQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "19d699b0-0a9c-431e-ea4b-cec526a0c120"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "61.8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Why is vectorization faster?\n"
+        ":Why is vectorization faster?\n"
       ],
       "metadata": {
         "id": "L4JkKYiujqns"
@@ -1134,7 +1330,7 @@
       "metadata": {
         "id": "XISh6eh3joJ7"
       },
-      "execution_count": null,
+      "execution_count": 175,
       "outputs": []
     },
     {
@@ -1167,7 +1363,7 @@
       "metadata": {
         "id": "thv3qP03jwbC"
       },
-      "execution_count": null,
+      "execution_count": 176,
       "outputs": []
     },
     {
@@ -1185,7 +1381,7 @@
       "metadata": {
         "id": "o9JGLgIOj6K2"
       },
-      "execution_count": null,
+      "execution_count": 177,
       "outputs": []
     },
     {
@@ -1225,7 +1421,7 @@
       "metadata": {
         "id": "EpheXo3gkAuU"
       },
-      "execution_count": null,
+      "execution_count": 178,
       "outputs": []
     },
     {
@@ -1255,7 +1451,7 @@
       "metadata": {
         "id": "NnQSyMMAkJjP"
       },
-      "execution_count": null,
+      "execution_count": 179,
       "outputs": []
     },
     {
@@ -1287,7 +1483,7 @@
       "metadata": {
         "id": "eBjd0sjkkR-J"
       },
-      "execution_count": null,
+      "execution_count": 180,
       "outputs": []
     },
     {
@@ -1309,7 +1505,7 @@
       "metadata": {
         "id": "6OYTZ5WYkcNM"
       },
-      "execution_count": null,
+      "execution_count": 181,
       "outputs": []
     },
     {
@@ -1334,7 +1530,7 @@
       "metadata": {
         "id": "NZm_yBGrkjDG"
       },
-      "execution_count": null,
+      "execution_count": 182,
       "outputs": []
     },
     {
