--- a/numpy_student_lab.ipynb
+++ b/numpy_student_lab.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 48,
       "metadata": {
         "id": "8e2llPlAhiFx"
       },
@@ -70,9 +70,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3bf2fce3-df74-44a1-fdc9-a405be7a22ea"
+        "outputId": "89e61965-c799-4fe3-fbe6-51376dfb89fd"
       },
-      "execution_count": 158,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -87,7 +87,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 158
+          "execution_count": 49
         }
       ]
     },
@@ -108,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21f3ff3b-09aa-48cc-dc24-80c8a87fb36f"
+        "outputId": "3951fecf-c32a-4a2b-a2bb-052c39f8a47b"
       },
-      "execution_count": 159,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,7 +129,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 159
+          "execution_count": 50
         }
       ]
     },
@@ -150,9 +150,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "407d480e-af08-4771-c49f-d9c4a6827f16"
+        "outputId": "977ebc66-d18b-41e4-bde6-144b7db461ae"
       },
-      "execution_count": 160,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +184,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 160
+          "execution_count": 51
         }
       ]
     },
@@ -224,9 +224,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5aa9a71d-bd4d-46af-dff8-635d1475bcac"
+        "outputId": "a09c2705-f56a-4419-a371-109b997c5fd2"
       },
-      "execution_count": 161,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,7 +326,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 161
+          "execution_count": 52
         }
       ]
     },
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd0b9105-41e2-4306-9c38-e3be8eb67043"
+        "outputId": "9ae2e16a-c47f-4e40-f4b0-e35d7eaa7c75"
       },
-      "execution_count": 162,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,9 +408,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f739fbf2-c81d-436f-e93c-b2ff08e55a4d"
+        "outputId": "0ab8090d-b535-4eb7-a797-2792adc78ef3"
       },
-      "execution_count": 163,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 163
+          "execution_count": 54
         }
       ]
     },
@@ -439,9 +439,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a61b3488-3d8c-413d-c96a-97208a70bea3"
+        "outputId": "47a038c9-9e26-4732-b9d9-c037a5fffb5e"
       },
-      "execution_count": 164,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +455,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 164
+          "execution_count": 55
         }
       ]
     },
@@ -492,9 +492,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca53cdae-6f1d-40c2-d366-9d605bdd19cb"
+        "outputId": "2d486be3-2873-4086-e6f1-d2c29938d439"
       },
-      "execution_count": 165,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -753,7 +753,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 165
+          "execution_count": 56
         }
       ]
     },
@@ -776,9 +776,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "23385fa1-cedb-496a-cd4e-047a6a15cf4c"
+        "outputId": "ec31c25d-1e44-4fe1-ffaa-2e504ef07bac"
       },
-      "execution_count": 166,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 166
+          "execution_count": 57
         }
       ]
     },
@@ -936,9 +936,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41898fda-655f-4ffa-b58a-544a0e4248b4"
+        "outputId": "9bf7e803-2405-4563-ca30-67ca52e1bf19"
       },
-      "execution_count": 167,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -984,9 +984,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "305e96de-5a5a-4de8-b793-a7bd106c81d4"
+        "outputId": "ee079a0f-d72e-4aaa-ebbf-518a60100a9d"
       },
-      "execution_count": 168,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -996,7 +996,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 168
+          "execution_count": 59
         }
       ]
     },
@@ -1018,9 +1018,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3c8ce506-80da-4248-db0b-a810f11e5be9"
+        "outputId": "a143da03-16d0-49f9-8976-52d707dc5b71"
       },
-      "execution_count": 169,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 169
+          "execution_count": 60
         }
       ]
     },
@@ -1102,9 +1102,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c6d18e24-3b07-470f-a36e-f4a06d05a007"
+        "outputId": "0bd966ea-5610-456d-bdf0-f46ab14675ac"
       },
-      "execution_count": 170,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1114,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 170
+          "execution_count": 61
         }
       ]
     },
@@ -1158,9 +1158,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5498805-f13a-448a-b682-56f55c44b9a4"
+        "outputId": "8db8acc0-9f30-4405-acfa-046e679fa99f"
       },
-      "execution_count": 171,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,9 +1213,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "234758db-a16a-47a9-cb0b-5ea2f1162965"
+        "outputId": "7eac9259-6beb-4e5c-9ea4-a57f63e94656"
       },
-      "execution_count": 186,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1225,7 +1225,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 186
+          "execution_count": 63
         }
       ]
     },
@@ -1255,15 +1255,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d158f62-772d-438b-f393-57262f971d24"
+        "outputId": "e1d8b8ab-6a70-4fdc-85cb-a8030df38be9"
       },
-      "execution_count": 187,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.8823\n"
+            "0.4497\n"
           ]
         }
       ]
@@ -1283,15 +1283,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19d699b0-0a9c-431e-ea4b-cec526a0c120"
+        "outputId": "d5ae79ad-7fa7-44d5-99a1-b211ec6be0c1"
       },
-      "execution_count": 189,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "61.8\n"
+            "131.9\n"
           ]
         }
       ]
@@ -1330,7 +1330,7 @@
       "metadata": {
         "id": "XISh6eh3joJ7"
       },
-      "execution_count": 175,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -1358,13 +1358,35 @@
         "# Implement naive softmax\n",
         "\n",
         "def softmax_naive(X):\n",
-        "    ...\n"
+        "  ex=np.exp(X)\n",
+        "  return ex/ex.sum(axis=1,keepdims=True)\n",
+        "\n",
+        "Xbig = np.array([[1000.0, 1001.0, 1002.0]])\n",
+        "try:\n",
+        "  softmax_naive(Xbig)\n",
+        "except FloatingPointError as e:\n",
+        "  print('overflow:',e)\n"
       ],
       "metadata": {
-        "id": "thv3qP03jwbC"
+        "id": "thv3qP03jwbC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "61f649e5-a3bf-48af-d38d-5c1d257451d4"
       },
-      "execution_count": 176,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1733447567.py:5: RuntimeWarning: overflow encountered in exp\n",
+            "  ex=np.exp(X)\n",
+            "/tmp/ipython-input-1733447567.py:6: RuntimeWarning: invalid value encountered in divide\n",
+            "  return ex/ex.sum(axis=1,keepdims=True)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1376,13 +1398,31 @@
         "# - Subtract max per row\n",
         "\n",
         "def softmax_stable(X):\n",
-        "    ...\n"
+        "  Z = X - X.max(axis=1,keepdims=True)\n",
+        "  ex = np.exp(Z)\n",
+        "  return ex/ex.sum(axis=1,keepdims=True)\n",
+        "\n",
+        "print('stable:',softmax_stable(Xbig))\n",
+        "print('rowsum:',softmax_stable(Xbig).sum(axis=1))"
       ],
       "metadata": {
-        "id": "o9JGLgIOj6K2"
+        "id": "o9JGLgIOj6K2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee79863f-0bee-4608-a711-03f8b825d47e"
       },
-      "execution_count": 177,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "stable: [[0.09003057 0.24472847 0.66524096]]\n",
+            "rowsum: [1.]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1416,13 +1456,41 @@
       "source": [
         "# TODO:\n",
         "# Try valid and invalid matrix multiplications\n",
-        "\n"
+        "\n",
+        "A = np.random.default_rng(3).standard_normal((3,4))\n",
+        "B = np.random.default_rng(4).standard_normal((4,2))\n",
+        "\n",
+        "mat_mul = A @ B\n",
+        "print(mat_mul.shape)\n",
+        "\n",
+        "try:\n",
+        "  _ = A @ A\n",
+        "except ValueError as e:\n",
+        "  print('Invalid Matrix Multiplication:',e)\n",
+        "\n",
+        "print('A@B==dot_product',np.allclose(np.dot(A,B),mat_mul))\n",
+        "print('mat_mul==dot_product',np.allclose(np.matmul(A,B),mat_mul))"
       ],
       "metadata": {
-        "id": "EpheXo3gkAuU"
+        "id": "EpheXo3gkAuU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5504282b-3209-400a-bf8a-14a10187b2ec"
       },
-      "execution_count": 178,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(3, 2)\n",
+            "Invalid Matrix Multiplication: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 3 is different from 4)\n",
+            "A@B==dot_product True\n",
+            "mat_mul==dot_product True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1446,13 +1514,32 @@
       "cell_type": "code",
       "source": [
         "# TODO:\n",
-        "# Solve Ax = b and verify solution\n"
+        "# Solve Ax = b and verify solution\n",
+        "\n",
+        "rng = np.random.default_rng(6)\n",
+        "A = rng.standard_normal((5,5))\n",
+        "b = rng.standard_normal((5,))\n",
+        "X = np.linalg.solve(A,b)\n",
+        "resid = np.linalg.norm(A@X-b)\n",
+        "print('residual:',resid)\n"
       ],
       "metadata": {
-        "id": "NnQSyMMAkJjP"
+        "id": "NnQSyMMAkJjP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a7610766-2ceb-4816-b8f4-c6c286c9aff6"
       },
-      "execution_count": 179,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "residual: 1.7702748954631059e-15\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1477,14 +1564,39 @@
       "source": [
         "# TODO:\n",
         "# Compare in-place vs out-of-place operations\n",
+        "X = np.random.default_rng(7).standard_normal(2_000_000)\n",
+        "Y = X.copy()\n",
+        "t0 = time.time()\n",
+        "#broadcasting 1 across X and saving in a new array\n",
+        "Z = X + 1.0\n",
+        "t_out = time.time() - t0\n",
+        "t1 = time.time()\n",
+        "# modified the same array\n",
+        "Y += 1.0\n",
+        "t_in = time.time() - t1\n",
+        "print('out of place:',round(t_out,4))\n",
+        "print('in place:',round(t_in,4))\n",
         "\n",
         "\n"
       ],
       "metadata": {
-        "id": "eBjd0sjkkR-J"
+        "id": "eBjd0sjkkR-J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d8506824-0a05-494b-c563-fb4cc5dd5025"
       },
-      "execution_count": 180,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "out of place: 0.0078\n",
+            "in place: 0.002\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1500,13 +1612,30 @@
       "source": [
         "# TODO:\n",
         "# Inspect array strides and explain\n",
-        "\n"
+        "# strides = how many bytes to step in each direction\n",
+        "A = np.arange(24).reshape(6,4)\n",
+        "print('shape:',A.shape, 'stride:',A.strides)\n",
+        "B = A[:,::2]\n",
+        "print('shape:',B.shape, 'stride:',B.strides)\n"
       ],
       "metadata": {
-        "id": "6OYTZ5WYkcNM"
+        "id": "6OYTZ5WYkcNM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "20b0f557-50a1-4706-dc78-b6b6401d2dfe"
       },
-      "execution_count": 181,
-      "outputs": []
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "shape: (6, 4) stride: (32, 8)\n",
+            "shape: (6, 2) stride: (32, 16)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1525,13 +1654,47 @@
         "# - Normalize features\n",
         "# - Compute covariance\n",
         "# - Extract top-k eigenvectors\n",
-        "\n"
+        "rng = np.random.default_rng(8)\n",
+        "X = rng.standard_normal((10_000,100))\n",
+        "mu = X.mean(axis=0,keepdims=True)\n",
+        "print(mu.shape)\n",
+        "sigma = X.std(axis=0,keepdims=True)\n",
+        "print(sigma.shape)\n",
+        "Xn = (X - mu)/sigma\n",
+        "C = (Xn.T@Xn)/(Xn.shape[0]-1)\n",
+        "eigval,eigvecs = np.linalg.eigh(C)\n",
+        "k=5\n",
+        "top_idx=np.argsort(eigval)[-k:][::-1]\n",
+        "top_idx"
       ],
       "metadata": {
-        "id": "NZm_yBGrkjDG"
+        "id": "NZm_yBGrkjDG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8b2c563b-6b5f-4e5c-8f20-a59824868588"
       },
-      "execution_count": 182,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 100)\n",
+            "(1, 100)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([99, 98, 97, 96, 95])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
     },
     {
       "cell_type": "markdown",
